# uol

./: README.md  test.urdf
L4/cm1005_itp1/gameproject/: sketch.js
L4/cm1010_itp2/: .eslintrc  .eslintrc.json  ITP2.code-workspace  climate-change.js  covid19.js  election-map.js  gallery.js  helper-functions.js  index.html  package.json  pseudocode.pseudo  research.md  sketch.js  style.css  tech-diversity-gender.js
L4/cm1015_nm/summary/: CM1015_NM.tex  preamble.tex
L4/cm1020_dm/: .gitignore  DM.code-workspace
L4/cm1020_dm/PeerGradedWeek2/: PG_W2_Arjun.tex
L5/cm2005_oop/midterm/: CMakeLists.txt  CSVReader.cpp  CSVReader.hpp  MerkleBot.cpp  MerkleBot.hpp  MerkleMain.cpp  MerkleMain.hpp  Merklerex.srctrldb  Merklerex.srctrlprj  OrderBook.cpp  OrderBook.hpp  OrderBookEntry.cpp  OrderBookEntry.hpp  Wallet.cpp  Wallet.hpp  main.cpp
L5/cm2005_oop/midterm/report-midterm/: summary.tex
L5/cm2010_sdd/: README.md  bib.bib  summary.tex
L5/cm2015_pwd/: environment.yml  index.ipynb  report.20201105.141112.15291.0.001.json  report.20201105.143215.15349.0.001.json  schools.json
L5/cm2020_asp/: README.md  ddl.txt  git.txt  main.fdb_latexmk  main.fls  storymapping.md
L5/cm2035_ads2/: ads2_answers.docx  alg.js
L5/cm2040_dnw/: DNW.code-workspace
L6/cm3010_dadt/: answers.docx  summary.tex  ~$structions.docx
L6/cm3015_mlnn/: Classifying_Mushrooms.html  Classifying_Mushrooms.ipynb  MLNN End of Term Assignment.ipynb  summary.tex
L6/cm3020_ai/: ai_answers.docx  genome.py  params.txt  summary.tex  test_genome.py
templates/: cover.tex  preamble.tex  summary.tex
(+1231 files in other folders)
